welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value lireMessage
  if (lireMessage()=='R') {
      ^BDRBuggle:7: error: not found: value lireMessage
  if (lireMessage()=='L') {
      ^BDRBuggle:11: error: not found: value lireMessage
  if (lireMessage()=='I') {
      ^BDRBuggle:15: error: not found: value lireMessage
  if (lireMessage()=='A') {
      ^BDRBuggle:18: error: not found: value lireMessage
  if (lireMessage()=='B') {
      ^BDRBuggle:22: error: not found: value lireMessage
  if (lireMessage()=='C') {
      ^BDRBuggle:28: error: not found: value lireMessage
  if (lireMessage()=='Z') {
      ^BDRBuggle:31: error: not found: value lireMessage
  if (lireMessage()=='Y') {
      ^BDRBuggle:35: error: not found: value lireMessage
  if (lireMessage()=='X') {
      ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
      ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
                            ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
                                                  ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
                                                                        ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
                                                                                              ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
                                                                                                                    ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
                                                                                                                                          ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
                                                                                                                                                                ^BDRBuggle:40: error: not found: value lireMessage
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
                                                                                                                                                                                      ^