welcome.lessons.welcome.bdr.BDR.scala.code
var fini:Boolean=true
while (fini) {
  if (lireMessage()=='R') {
    droite()
    avance()
  }
  if (lireMessage()=='L') {
    gauche()
    avance()
  }
  if (lireMessage()=='I') {
    retourne()
    avance()
  }
  if (lireMessage()=='A') {
    avance()
  }
  if (lireMessage()=='B') {
    avance()
    avance()
  }
  if (lireMessage()=='C') {
   	avance()
    avance()
    avance()
    
  }
  if (lireMessage()=='Z') {
    recule()
  }
  if (lireMessage()=='Y') {
    recule()
    recule()
  }
  if (lireMessage()=='X') {
    recule()
    recule()
    recule()
  }
  if (lireMessage()=='A' or lireMessage()=='B' or lireMessage()=='C' or lireMessage()=='Z' or lireMessage()=='Y' or lireMessage()=='X' or lireMessage()=='R' or lireMessage()=='L' or lireMessage()=='I') {
    fini=true    
  }
  else {
    fini = false
  }
}